Analizadores/XML/analizador/ParserXML.java
/* Generated By:JavaCC: Do not edit this line. ParserXML.java */
        public class ParserXML implements ParserXMLConstants {
                public static void main(String[] args) throws ParseException{
                                try{
                                        ParserXML parser = new ParserXML(System.in);
                                        parser.INI();
                                }catch(ParseException pe){
                                        System.err.println("Error en el analisis...");
                                        System.err.println(pe.getMessage());
                                }
                        }

  final public void INI() throws ParseException {
    FILE();
    jj_consume_token(0);
  }

  final public void FILE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      MASTER();
      break;
    case 29:
      DB();
      break;
    case 43:
      TABLE();
      break;
    case 47:
      METHOD();
      break;
    case 49:
      OBJECT();
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**************************************************************************************************************
MASTER
**************************************************************************************************************/
  final public void MASTER() throws ParseException {
    jj_consume_token(21);
    label_1:
    while (true) {
      L_DB();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(22);
  }

  final public void L_DB() throws ParseException {
    jj_consume_token(23);
    jj_consume_token(24);
    jj_consume_token(id);
    jj_consume_token(25);
    jj_consume_token(26);
    jj_consume_token(path);
    jj_consume_token(27);
    jj_consume_token(28);
  }

/**************************************************************************************************************
DB
**************************************************************************************************************/
  final public void DB() throws ParseException {
    jj_consume_token(29);
    jj_consume_token(30);
    jj_consume_token(26);
    jj_consume_token(path);
    jj_consume_token(27);
    jj_consume_token(31);
    jj_consume_token(32);
    jj_consume_token(26);
    jj_consume_token(path);
    jj_consume_token(27);
    jj_consume_token(33);
    label_2:
    while (true) {
      DB_TABLE();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(34);
  }

  final public void DB_TABLE() throws ParseException {
    jj_consume_token(35);
    jj_consume_token(24);
    jj_consume_token(id);
    jj_consume_token(25);
    jj_consume_token(26);
    jj_consume_token(path);
    jj_consume_token(27);
    jj_consume_token(36);
    label_3:
    while (true) {
      ROWSDEF();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 39:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(37);
    jj_consume_token(38);
  }

  final public void ROWSDEF() throws ParseException {
    jj_consume_token(39);
    jj_consume_token(40);
    TIPO();
    jj_consume_token(41);
    jj_consume_token(24);
    jj_consume_token(id);
    jj_consume_token(25);
    jj_consume_token(42);
  }

/**************************************************************************************************************
TABLE
**************************************************************************************************************/
  final public void TABLE() throws ParseException {
    jj_consume_token(43);
    label_4:
    while (true) {
      ROW();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 39:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(44);
  }

  final public void ROW() throws ParseException {
    jj_consume_token(39);
    label_5:
    while (true) {
      FIELD();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(42);
  }

  final public void FIELD() throws ParseException {
    jj_consume_token(24);
    jj_consume_token(id);
    jj_consume_token(25);
    jj_consume_token(45);
    VALUE();
    jj_consume_token(46);
  }

/**************************************************************************************************************
METHOD
**************************************************************************************************************/
  final public void METHOD() throws ParseException {
    jj_consume_token(47);
    jj_consume_token(48);
  }

/**************************************************************************************************************
OBJECT
**************************************************************************************************************/
  final public void OBJECT() throws ParseException {
    jj_consume_token(49);
    jj_consume_token(50);
  }

/**************************************************************************************************************
COMUN
**************************************************************************************************************/
  final public void TIPO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case _text:
      jj_consume_token(_text);
      break;
    case _integer:
      jj_consume_token(_integer);
      break;
    case _double:
      jj_consume_token(_double);
      break;
    case _bool:
      jj_consume_token(_bool);
      break;
    case _date:
      jj_consume_token(_date);
      break;
    case _datetime:
      jj_consume_token(_datetime);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void VALUE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case cadena:
      jj_consume_token(cadena);
      break;
    case entero:
      jj_consume_token(entero);
      break;
    case doble:
      jj_consume_token(doble);
      break;
    case booleano:
      jj_consume_token(booleano);
      break;
    case fecha:
      jj_consume_token(fecha);
      break;
    case fecha_hora:
      jj_consume_token(fecha_hora);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  /** Generated Token Manager. */
  public ParserXMLTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[8];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20200000,0x800000,0x0,0x0,0x0,0x1000000,0x1f80,0x7e000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x28800,0x0,0x8,0x80,0x80,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public ParserXML(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ParserXML(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserXMLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ParserXML(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserXMLTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ParserXML(ParserXMLTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserXMLTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 8; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[51];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 8; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 51; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

                }
